sumo/tests/sumo/output/e3/errors/freq_negative/errors.sumo
Error: Negative sampling frequency (in e3-detector '4/1to3/1').
Quitting (on error).
